Fix to blur filter getting stuck on mobile

--- a/src/components/CaseStudy/CaseStudy.module.css
+++ b/src/components/CaseStudy/CaseStudy.module.css
@@ -42,7 +42,7 @@
 }
 
 .textLoadIn {
-  animation: textBlurInFocus var(--duration-fast) var(--ease-out) both;
+  animation: textBlurInFocus var(--duration-fast) var(--ease-out) backwards;
   animation-delay: calc(var(--duration-fast) / 2);
 }
 
@@ -53,7 +53,7 @@
   }
   to {
     opacity: 1;
-    filter: blur(0);
+    filter: none;
   }
 }
 
